# dom-enterprise-gateway

./: .gitignore  GEMINI.md  README.md  backend_source_map.md  docker-compose.yml  frontend_6-1_6-2_explained_for_students.md  frontend_7-1_auth_and_main_layout_explained_for_students.md  frontend_7-2_chat_ui_explained_for_students.md  frontend_7-3_knowledge_ui_explained_for_students.md  frontend_7-4_settings_and_help_explained_for_students.md  requirements_p0_core_chat.md
backend/: Dockerfile  TESTING_NOTES.md  check_import.py  pyproject.toml  run_tests.sh
backend/alembic/versions/: 001_add_user_settings.py
backend/app/: dependencies.py  main.py
backend/app/core/: config.py  database.py
backend/app/llm/: __init__.py  mock_llm.py
backend/app/models/: __init__.py  chat.py  feedback.py  knowledge.py  memory.py  tenant.py  user.py  user_settings.py
backend/app/repositories/: __init__.py  base.py  chat.py  feedback.py  knowledge.py  memory.py  tenant.py  user.py  user_settings.py
backend/app/schemas/: __init__.py  auth.py  chat.py  feedback.py  file.py  help.py  user_settings.py
backend/app/services/: __init__.py  answer_composer.py  auth.py  chat_service.py  dom_orchestrator.py  feedback_service.py  file_service.py  help.py  memory_service.py  rag_service.py  user_settings.py
backend/app/tests/: conftest.py  test_auth_service.py  test_chat_service.py  test_dom_orchestrator_service.py  test_endpoints_admin.py  test_endpoints_auth.py  test_endpoints_chat.py  test_endpoints_feedback.py  test_endpoints_files.py  test_help.py  test_main.py  test_memory_service.py  (+3 more)
(+113 files in other folders)
